# protoc-gen-parser

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  owners.txt
.github/workflows/: dev.yml  main.yml
cmd/: BUILD.bazel  proto-gen-parser.go
pkg/api/: BUILD.bazel  interfaces.go
pkg/logging/: BUILD.bazel
pkg/pb/: BUILD.bazel  enums.go  factory.go  message.go  package.go  qualified.go  service.go
pkg/reader/: BUILD.bazel  model.go  reader_package.go  scanner.go  vis_annotation.go  vis_attribute.go  vis_comment.go  vis_enum.go  vis_message.go  vis_message_option.go  vis_rpc.go  vis_service.go
test/: BUILD.bazel  graph_test.go  model_reader_test.go  service_reader_test.go
test/data/api/location/: model.proto
