load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["proto-gen-parser.go"],
    importpath = "github.com/GoogleCloudPlatform/proto-gen-parser/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    basename = "proto-gen-md-diagrams",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
